[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/controls/CameraTrackTo.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/pages/Page01.gd" type="Script" id=2]
[ext_resource path="res://assets/pages/page01/back.png" type="Texture" id=3]
[ext_resource path="res://assets/pages/page01/front.png" type="Texture" id=4]
[ext_resource path="res://assets/pages/page01/dialog.png" type="Texture" id=5]
[ext_resource path="res://assets/pages/page01/mid.png" type="Texture" id=6]
[ext_resource path="res://src/controls/QTEControl.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/shaders/CRT.shader" type="Shader" id=8]
[ext_resource path="res://src/shaders/ViewportMirror.shader" type="Shader" id=9]
[ext_resource path="res://src/World.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/effects/ColorTransition.tscn" type="PackedScene" id=11]

[sub_resource type="Animation" id=1]
length = 90.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("CameraTrackTo:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 59.7, 89.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CameraTrackTo:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 18.406, -0.25, 0, 0.25, 0, -31.0752, -0.25, 0, 0.25, 0, -34.3212, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 59.7, 89.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("CameraTrackTo:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 32.7738, -0.25, 0, 0.25, 0, 32.7738, -0.25, 0, 0.25, 0, 32.7738, -0.25, 0, 0.25, 0, 15.3749, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 59.7, 60, 89.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Position3D:translation:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 60, 89.5 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Position3D:translation:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 15.577, -0.25, 0, 0.25, 0, -31.302, -0.25, 0, 0.25, 0, -34.2594, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 60, 89.5 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Position3D:translation:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( -17.204, -0.25, 0, 0.25, 0, -17.204, -0.25, 0, 0.25, 0, -17.204, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 60, 89.5 )
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 32.1, 90 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "stop"
}, {
"args": [  ],
"method": "change_scene"
} ]
}

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("Portal/Viewport")

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 9 )
shader_param/mirror = true
shader_param/reflection_texture = SubResource( 2 )

[sub_resource type="QuadMesh" id=4]
resource_local_to_scene = true
material = SubResource( 3 )

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 8 )
shader_param/grayscale = false
shader_param/boost = 1.2
shader_param/grille_opacity = 0.85
shader_param/scanlines_opacity = 0.95
shader_param/vignette_opacity = 0.2
shader_param/scanlines_speed = 1.0
shader_param/show_grille = true
shader_param/show_scanlines = true
shader_param/show_vignette = true
shader_param/show_curvature = true
shader_param/screen_size = Vector2( 320, 180 )
shader_param/aberration_amount = 0.0
shader_param/move_aberration = false
shader_param/aberration_speed = 1.0

[node name="Page01" type="Spatial"]
script = ExtResource( 2 )
scene = ExtResource( 10 )

[node name="CameraTrackTo" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 0.998402, 0.0565147, 0, -0.0565147, 0.998402, 0, 18.406, 32.7738 )
cull_mask = 1048574
up = Vector3( 0, 1, 0 )

[node name="Position3D" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15.577, -17.204 )

[node name="Layers" type="Spatial" parent="."]

[node name="00" type="Sprite3D" parent="Layers"]
layers = 2
alpha_cut = 2
texture = ExtResource( 5 )

[node name="01" type="Sprite3D" parent="Layers"]
transform = Transform( 1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.1, 0, 0, -4 )
layers = 2
alpha_cut = 2
texture = ExtResource( 4 )

[node name="02" type="Sprite3D" parent="Layers"]
transform = Transform( 1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 0, -8 )
layers = 2
alpha_cut = 2
texture = ExtResource( 6 )

[node name="03" type="Sprite3D" parent="Layers"]
transform = Transform( 1.5, 0, 0, 0, 1.3, 0, 0, 0, 1.3, 0, 0, -12 )
layers = 2
alpha_cut = 2
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/main = SubResource( 1 )

[node name="Portal" type="MeshInstance" parent="."]
transform = Transform( 37.4, 0, 0, 0, 10, 0, 0, 0, 1, 0, -34.227, 0 )
layers = 2
mesh = SubResource( 4 )
material/0 = null

[node name="Viewport" type="Viewport" parent="Portal"]
size = Vector2( 748, 200 )
shadow_atlas_size = 4

[node name="ColorTransition" parent="." instance=ExtResource( 11 )]
color = Color( 1, 1, 1, 1 )

[node name="Shaders" type="Node" parent="."]

[node name="CRTShader" type="ColorRect" parent="Shaders"]
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QTEControl" parent="." instance=ExtResource( 7 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 474.625
margin_top = 298.127
margin_right = 986.625
margin_bottom = 810.127
rect_scale = Vector2( 0.161, 0.161 )
scale = 0.161
[connection signal="completed" from="QTEControl" to="." method="_on_QTEControl_completed"]
